gcc/testsuite/gdc.test/fail_compilation/imports/fail4479.d
module imports.fail4479mod;
